# pyIsEmail

./: .coveragerc  .gitignore  .gitlab-ci.yml  .travis.yml  .venv  CHANGELOG.md  CHANGELOG.rst  CONTRIBUTING.rst  LICENSE  README.md  README.rst  index.html  params.json  pyproject.toml  requirements-dev.txt  requirements-py2.txt  requirements-py3.txt  requirements.txt  setup.cfg  setup.py  tox.ini
.github/workflows/: ci.yml
pyIsEmail.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
pyisemail/: __init__.py  email_validator.py  grammar.py  is_email.py  parser.py  reference.py  utils.py  version.py
pyisemail/common/: version.py
pyisemail/diagnosis/: __init__.py  base_diagnosis.py  cfws_diagnosis.py  deprecated_diagnosis.py  dns_diagnosis.py  gtld_diagnosis.py  invalid_diagnosis.py  rfc5321_diagnosis.py  rfc5322_diagnosis.py  valid_diagnosis.py
pyisemail/grammars/: __init__.py  rfc2822.py  rfc5322.py  rfc5322_obsolete.py
pyisemail/test/: test_dns_validator.py  test_email_validator.py  test_is_email.py  test_parser.py  test_parser_validator.py  test_reference.py
pyisemail/test/data/: dns-tests.xml  tests-one.xml  tests.xml
pyisemail/test/diagnosis/: test_base_diagnosis.py
pyisemail/test/validators/: __init__.py  test_dns_validator.py  test_parser_validator.py
pyisemail/validators/: __init__.py  dns_validator.py  grammar_validator.py  gtld_validator.py  parser_validator.py
script/: chores  console  setup  smoke-test  static-analysis  test
src/pyisemail/diagnosis/: deprecated_diagnosis.py
src/pyisemail/validators/: __init__.py
tests/: test_email_validator.py  test_is_email.py  test_reference.py
tests/data/: dns-tests.xml  tests.xml
tests/diagnosis/: test_base_diagnosis.py
tests/validators/: __init__.py  test_dns_validator.py  test_parser_validator.py
